fix: User chats endpoint fix